[tool.poetry]
name = "3divi-qa-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "3divi_qa_test"}]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
